fixed react-slick z-index issue conflicting with the main-menu

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -21,6 +21,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     background: #262626;
