--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -15,3 +15,7 @@
 .portfolio img {
     height: 150px;
 }
+
+.slick-slider {
+    z-index: 1;
+}
